# radiotherapy-physics-rag

./: .dockerignore  .env.example  .gitignore  .mcp.json  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTAINER.md  CONTRIBUTING.md  DELIVERABLE_SUMMARY.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_SOURCES.md  constraints.txt  project_brief.md  pyproject.toml  requirements.txt
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
chatgpt_knowledge/: README.md  custom_gpt_instructions.md  starter_questions.md
evaluation/: .gitignore  README.md  ablation_eval_results.json  ablation_eval_results.md  agent_host_evaluation_protocol.md  agent_skill_eval_results.json  agent_skill_eval_results.md  agent_task_eval_results.json  agent_task_eval_results.md  answer_generation_eval_results.json  answer_generation_eval_results.md  answer_quality_eval_results.json  answer_quality_eval_results.md  asset_qa_eval_results.json  asset_qa_eval_results.md  benchmark_governance.md  corpus_baseline.json  current_code_and_metric_audit.md  evaluation_output_audit.json  evaluation_output_audit.md  expert_review_rubric_template.csv  external_validation_protocol.md  extractive_selector_ablation.json  extractive_selector_ablation.md  failure_taxonomy.json  failure_taxonomy.md  gold_answer_eval_results.json  gold_answer_eval_results.md  gold_answer_source_notes.md  mcp_contract_eval_results.json  mcp_contract_eval_results.md  navigator_eval_results.json  navigator_eval_results.md  paper_experiment_matrix.json  paper_experiment_matrix.md  public_credible_eval_results.md  public_credible_questions.json  public_release_audit.json  radiotherapy_agent_tasks.json  radiotherapy_asset_questions.json  (+11 more)
evaluation/parser_comparison/: opendataloader_vs_pymupdf.json  opendataloader_vs_pymupdf.md
evaluation/parser_comparison/opendataloader/: public_mcq_eval_results.json  public_mcq_eval_results.md
evaluation/parser_comparison/pymupdf_baseline/: public_mcq_eval_results.json  public_mcq_eval_results.md  runtime_snapshot.json
examples/: build_index_from_pdfs.json  bundle_query.json  demo_questions.md  empty_corpus_bootstrap.json  evidence_query.json  extractive_answer_query.json  inspect_pdfs.json  insufficient_evidence_query.json  invalid_document_scope.json  mcp_query.json  ocr_required.json
experience/: experience_memory.jsonl
navigator/: SKILL.md  entity_index.json
navigator/topic_indexes/: biological-models-and-response.jsonl  brachytherapy.jsonl  education-and-foundations.jsonl  equipment-and-facilities.jsonl  imaging-and-localization.jsonl  nomenclature-and-data.jsonl  nontarget-dose-and-radiation-protection.jsonl  quality-management-and-safety.jsonl  reference-dosimetry.jsonl  treatment-planning.jsonl
navigator/topics/biological-models-and-response/: INDEX.md
navigator/topics/brachytherapy/: INDEX.md
navigator/topics/education-and-foundations/: INDEX.md
navigator/topics/equipment-and-facilities/: INDEX.md
navigator/topics/imaging-and-localization/: INDEX.md
navigator/topics/nomenclature-and-data/: INDEX.md
navigator/topics/nontarget-dose-and-radiation-protection/: INDEX.md
navigator/topics/quality-management-and-safety/: INDEX.md
navigator/topics/reference-dosimetry/: INDEX.md
navigator/topics/treatment-planning/: INDEX.md
radiotherapy_physics_rag/: __init__.py  cli.py
references/: academic_norm_review_result.md  agent_evidence_safety.md  corpus_provenance.md  document_onboarding.md  mcp_contract_evaluation.md  mcp_usage.md  model_setup.md  output_contract.md  paper_readiness_checklist.md  pdf_asset_extraction.md  release_checklist.md  release_notes_v2.1.1.md  starter_corpus.md  user_modes.md
reports/: starter_corpus_sources.json
schemas/: skill_error.schema.json  skill_input.schema.json  skill_output.schema.json
scripts/: __init__.py  add_documents.py  analyze_failure_taxonomy.py  audit_evaluation_outputs.py  audit_public_release.py  audit_runtime_integrity.py  build_chatgpt_knowledge.py  build_corpus.py  build_index.py  build_navigator.py  build_paper_experiment_matrix.py  build_provenance_manifest.py  build_public_release.py  build_skill_bundle.py  build_sparse_index.py  chunk_corpus.py  compare_mcq_answer_methods.py  compare_pdf_parsers.py  download_starter_corpus.py  evaluate.py  evaluate_ablation.py  evaluate_agent_skill.py  evaluate_agent_tasks.py  evaluate_answer_generation.py  evaluate_answer_quality.py  evaluate_asset_qa.py  evaluate_extractive_selectors.py  evaluate_gold_answers.py  evaluate_mcp_contract.py  evaluate_navigator.py  evaluate_public_mcq_exam.py  evaluate_statistical_uncertainty.py  evaluate_strategies.py  evaluate_table_cell_qa.py  extract_pdf_assets.py  generate_agent_task_benchmark.py  generate_asset_benchmark.py  generate_gold_answer_benchmark.py  generate_public_benchmark.py  generate_table_cell_benchmark.py  (+14 more)
skills/radiotherapy-physics-navigator/: SKILL.md
skills/radiotherapy-physics-rag/: SKILL.md
src/: config.py  schemas.py  utils.py
src/chunking/: splitter.py
src/evaluation/: metrics.py
src/generation/: answering.py  medgemma_client.py  prompting.py
src/orchestration/: __init__.py  router.py
src/pdf_processing/: assets.py  extractor.py  opendataloader_backend.py
src/retrieval/: dense.py  embedder.py  heuristics.py  hybrid.py  reranker.py  sparse.py
tests/: test_codex_host_runner.py  test_definition_and_tags.py  test_host_mcq_scoring.py  test_skill_package.py  test_smoke.py
