[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiotherapy-physics-rag"
version = "2.1.1"
description = "Codex plugin, MCP server, and local RAG evidence agent for radiotherapy physics reports."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Raymond-Zhou-2005" }
]
keywords = [
  "rag",
  "radiotherapy",
  "medical-physics",
  "document-qa",
  "codex-skill",
  "mcp-server",
  "evidence-qa",
  "faiss",
  "bm25"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Text Processing :: Indexing"
]
dependencies = [
  "pymupdf>=1.24.0",
  "numpy>=1.26.0",
  "faiss-cpu>=1.8.0",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.0.0",
  "transformers>=4.42.0",
  "torch>=2.2.0",
  "tqdm>=4.66.0",
  "accelerate>=0.33.0",
  "sentencepiece>=0.2.0",
  "protobuf>=4.25.0,<6",
  "huggingface_hub>=0.36.0",
  "hf-xet>=1.1.0",
  "mcp>=1.2.0",
  "jsonschema>=4.23.0",
  "rich>=13.8.0,<14.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.8.0",
  "mypy>=1.11.0"
]

[project.urls]
Homepage = "https://github.com/Raymond-Zhou-2005/radiotherapy-physics-rag"
Repository = "https://github.com/Raymond-Zhou-2005/radiotherapy-physics-rag"
Issues = "https://github.com/Raymond-Zhou-2005/radiotherapy-physics-rag/issues"

[project.scripts]
radiotherapy-rag = "radiotherapy_physics_rag.cli:run_skill_main"
radiotherapy-rag-add = "radiotherapy_physics_rag.cli:add_documents_main"
radiotherapy-rag-analyze-failures = "radiotherapy_physics_rag.cli:analyze_failure_taxonomy_main"
radiotherapy-rag-audit-public-release = "radiotherapy_physics_rag.cli:audit_public_release_main"
radiotherapy-rag-bundle = "radiotherapy_physics_rag.cli:build_bundle_main"
radiotherapy-rag-chatgpt-knowledge = "radiotherapy_physics_rag.cli:build_chatgpt_knowledge_main"
radiotherapy-rag-download-corpus = "radiotherapy_physics_rag.cli:download_corpus_main"
radiotherapy-rag-doctor = "radiotherapy_physics_rag.cli:plugin_doctor_main"
radiotherapy-rag-build-navigator = "radiotherapy_physics_rag.cli:build_navigator_main"
radiotherapy-rag-build-paper-matrix = "radiotherapy_physics_rag.cli:build_paper_experiment_matrix_main"
radiotherapy-rag-build-public-release = "radiotherapy_physics_rag.cli:build_public_release_main"
radiotherapy-rag-build-sparse = "radiotherapy_physics_rag.cli:build_sparse_index_main"
radiotherapy-rag-evaluate-ablation = "radiotherapy_physics_rag.cli:evaluate_ablation_main"
radiotherapy-rag-evaluate-agent-skill = "radiotherapy_physics_rag.cli:evaluate_agent_skill_main"
radiotherapy-rag-evaluate-agent-tasks = "radiotherapy_physics_rag.cli:evaluate_agent_tasks_main"
radiotherapy-rag-evaluate-answer-generation = "radiotherapy_physics_rag.cli:evaluate_answer_generation_main"
radiotherapy-rag-evaluate-answer-quality = "radiotherapy_physics_rag.cli:evaluate_answer_quality_main"
radiotherapy-rag-evaluate-asset-qa = "radiotherapy_physics_rag.cli:evaluate_asset_qa_main"
radiotherapy-rag-evaluate-gold-answers = "radiotherapy_physics_rag.cli:evaluate_gold_answers_main"
radiotherapy-rag-evaluate-navigator = "radiotherapy_physics_rag.cli:evaluate_navigator_main"
radiotherapy-rag-evaluate-strategies = "radiotherapy_physics_rag.cli:evaluate_strategies_main"
radiotherapy-rag-evaluate-table-cells = "radiotherapy_physics_rag.cli:evaluate_table_cell_qa_main"
radiotherapy-rag-extract-assets = "radiotherapy_physics_rag.cli:extract_assets_main"
radiotherapy-rag-generate-agent-tasks = "radiotherapy_physics_rag.cli:generate_agent_task_benchmark_main"
radiotherapy-rag-generate-asset-benchmark = "radiotherapy_physics_rag.cli:generate_asset_benchmark_main"
radiotherapy-rag-generate-benchmark = "radiotherapy_physics_rag.cli:generate_public_benchmark_main"
radiotherapy-rag-generate-gold-answers = "radiotherapy_physics_rag.cli:generate_gold_answer_benchmark_main"
radiotherapy-rag-generate-table-cells = "radiotherapy_physics_rag.cli:generate_table_cell_benchmark_main"
radiotherapy-rag-list = "radiotherapy_physics_rag.cli:list_corpus_main"
radiotherapy-rag-inspect-pdfs = "radiotherapy_physics_rag.cli:inspect_pdfs_main"
radiotherapy-rag-mcp = "radiotherapy_physics_rag.cli:mcp_server_main"
radiotherapy-rag-ocr = "radiotherapy_physics_rag.cli:ocr_pdfs_main"
radiotherapy-rag-prepare = "radiotherapy_physics_rag.cli:prepare_index_main"
radiotherapy-rag-query = "radiotherapy_physics_rag.cli:plugin_query_main"
radiotherapy-rag-validate = "radiotherapy_physics_rag.cli:validate_skill_main"

[tool.setuptools]
packages = [
  "radiotherapy_physics_rag",
  "scripts",
  "src",
  "src.chunking",
  "src.evaluation",
  "src.generation",
  "src.pdf_processing",
  "src.orchestration",
  "src.retrieval"
]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
